# tranquil

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
tranquil/: Cargo.toml
tranquil-macros/: Cargo.toml
tranquil-macros/src/: lib.rs
tranquil/examples/: basic.rs
tranquil/examples/autocomplete/: autocomplete_module.rs  main.rs
tranquil/examples/basic/: main.rs
tranquil/examples/bot/: main.rs
tranquil/examples/interaction_module/: interaction_module.rs  main.rs
tranquil/examples/l10n/: example_module.rs  example_module_l10n.yaml  main.rs
tranquil/examples/l10n_generation/: example_module.rs  main.rs
tranquil/examples/options/: echo_module.rs  main.rs
tranquil/examples/ping_module/: main.rs  ping_module.rs
tranquil/examples/subcommands/: main.rs  subcommand_module.rs
tranquil/src/: autocomplete.rs  bot.rs  button.rs  command.rs  context.rs  custom_id.rs  interaction.rs  l10n.rs  lib.rs  locale.rs  message_component.rs  modal.rs  module.rs  resolve.rs  select_menu.rs  slash_command.rs  utils.rs
tranquil/src/context/: autocomplete.rs  command.rs  component.rs  modal.rs
tranquil/src/interaction/: command.rs  component.rs  error.rs  modal.rs
tranquil/src/interaction/command/: option.rs
tranquil/src/interaction/command/option/: attachment.rs  autocomplete.rs  boolean.rs  channel.rs  integer.rs  mentionable.rs  number.rs  role.rs  string.rs  user.rs
tranquil/src/resolve/: channel.rs  error.rs  integer.rs  mentionable.rs  number.rs  option.rs  string.rs  user.rs
