[package]
name = "tranquil-macros"
version = "0.2.0"
authors = ["Possseidon <xpossseidon@gmail.com>"]
edition = "2021"
description = "Macro crate for tranquil."
repository = "https://github.com/Possseidon/tranquil"
license = "MIT"
keywords = ["commands", "macro", "tranquil"]
categories = []

[lib]
proc-macro = true

[dependencies]
indoc = "2.0.4"
itertools = "0.12.0"
quote = { version = "1.0.33", default-features = false }
syn = { version = "2.0.37", default-features = false, features = [
    "clone-impls",
    "full",
    "parsing",
    "printing",
    "proc-macro",
] }
