[package]
name = "tranquil-macros"
version = "0.3.0"
authors = ["Possseidon <xpossseidon@gmail.com>"]
edition = "2024"
description = "Macro crate for tranquil."
repository = "https://github.com/Possseidon/tranquil"
license = "MIT"
keywords = ["commands", "macro", "tranquil"]
categories = []

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
quote = { version = "1.0.39", default-features = false }
syn = { version = "2.0.99", default-features = false, features = [
    "clone-impls",
    "full",
    "parsing",
    "printing",
    "proc-macro",
] }
