[package]
name = "tranquil"
version = "0.2.0"
authors = ["Possseidon <xpossseidon@gmail.com>"]
edition = "2021"
description = "A module framework for Discord bots with slash commands, based on serenity."
readme = "../README.md"
repository = "https://github.com/Possseidon/tranquil"
license = "MIT"
keywords = ["bot", "commands", "discord", "framework", "serenity"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
base91 = "0.1.0"
bincode = "1.3.3"
bounded-integer = { version = "0.5.8", features = ["types"] }
dotenvy = "0.15.7"
enumset = "1.1.5"
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
itertools = "0.14.0"
serde = { version = "1.0.218", default-features = false }
serde_json = "1.0.140"
serde_yaml = "0.9.34+deprecated"
serde-tuple-vec-map = { version = "1.0.1", default-features = false }
serenity = { version = "0.11.7", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }
thiserror = "2.0.12"
tokio = { version = "1.43.0", default-features = false, features = ["signal"] }
tranquil-macros = { version = "0.2.0", path = "../tranquil-macros" }
uuid = { version = "1.15.1", features = ["v4", "serde"] }

[dev-dependencies]
indoc = "2.0.5"
tokio = { version = "1.43.0", default-features = false, features = [
    "rt-multi-thread",
] }
