[package]
name = "tranquil"
version = "0.3.0"
authors = ["Possseidon <xpossseidon@gmail.com>"]
edition = "2024"
description = "A framework for Discord bots based on Serenity."
readme = "../README.md"
repository = "https://github.com/Possseidon/tranquil"
license = "MIT"
keywords = ["bot", "commands", "discord", "framework", "serenity"]
categories = ["api-bindings"]

[dependencies]
bounded-integer = { version = "0.5.8", features = ["types"] }
dotenvy = "0.15.7"
serenity = { version = "0.12.4", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }
thiserror = "2.0.12"
tokio = { version = "1.43.0", default-features = false, features = ["signal"] }
tranquil-macros = { version = "0.3.0", path = "../tranquil-macros" }
uuid = { version = "1.15.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.43.0", default-features = false, features = [
    "rt-multi-thread",
] }
