[package]
name = "tranquil"
version = "0.3.0"
authors = ["Possseidon <xpossseidon@gmail.com>"]
edition = "2024"
description = "A framework for Discord bots based on Serenity."
readme = "../README.md"
repository = "https://github.com/Possseidon/tranquil"
license = "MIT"
keywords = ["bot", "commands", "discord", "framework", "serenity"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0.97"
bounded-integer = { version = "0.5.8", features = ["types"] }
serenity = "0.12.4"
thiserror = "2.0.12"
tracing = "0.1.41"
tranquil-macros = { version = "0.3.0", path = "../tranquil-macros" }
uuid = { version = "1.15.1", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
tracing-subscriber = "0.3.19"
